--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "mygraphqlprj",
   "version": "1.0.0",
   "description": "Sample Project",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "app.js",
   "author": "WYT",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.8.0",
     "lodash": "^4.17.21",
-    "mongoose": "^7.4.4"
+    "mongoose": "^7.4.5"
+  },
+  "scripts": {
+    "start": "node app.js"
   }
 }
