--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,2 @@
 ENVIRONMENT=development
-DATABASE_NAME=GraphQLTesting
-DATABASE_URL=mongodb+srv://${process.env.mongoUsername}:${process.env.mongoUserPassword}@graphqlcluster.vhhygv4.mongodb.net/${process.env.mongoDatabase}?retryWrites=true&w=majority
+DATABASE_URL=mongodb+srv://WYT17:wuttyeetun@graphqlcluster.vhhygv4.mongodb.net/GraphQLTesting?retryWrites=true&w=majority
