--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,2 @@
 ENVIRONMENT=development
-DATABASE_URL=mongodb+srv://WYT17:wuttyeetun@graphqlcluster.vhhygv4.mongodb.net/GraphQLTesting?retryWrites=true&w=majority
+DATABASE_URL=mongodb+srv://WYT17:wuttyeetun@graphqlcluster.vhhygv4.mongodb.net:27017/GraphQLTesting?retryWrites=true&w=majority
